# Chat_PDF_GEMINI

./: .gitignore  README.md  app.py  htmlTemplates.py  pyproject.toml
