[tool.poetry]
name = "chat-alura-google-gemini"
version = "0.1.0"
description = ""
authors = ["Henrique Innecco <hinnecco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pypdf2 = "^3.0.1"
pypdf = "^4.2.0"
streamlit = "^1.34.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
google-generativeai = "^0.5.2"
langchain = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
